# tgstat-mcp

./: .env.example  pyproject.toml
src/: main.py  tgstat_client.py
