[project]
name = "tgstat-mcp"
version = "0.1.0"
description = "MCP server for TGStat API — Telegram channels analytics"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.8.0",
    "aiohttp>=3.9",
    "python-dotenv>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
